--- a/css/style.css
+++ b/css/style.css
@@ -60,44 +60,120 @@ form {
    background-image: url("/img/list-bg.png");
    background-size:cover;
    background-repeat:no-repeat;
-   border: 2px red solid;
+ 
    margin: 20px;
 }
 #sec {
-    margin-left: 700px;
+    
+    position: relative;
     display: inline-block;
-    width: 250px;
-    height: 350px;
-    border: 2px red solid;
+    top: 40px;
+    width: 420px;
+    height: 400px;
+    
+    font-family: 'Patrick Hand', cursive;
+    font-size: 25px;
+    
 }
+#sec label,input{
+    display:inline-block;
+    position: relative;
+    padding-top: 16px;
+  
+}
+
 #first {
     display: inline-block;
-    width: 250px;
+    position: relative;
+    right: 130px;
+    width: 300px;
     height: 350px;
-    border: 2px red solid;
+
     margin-left: 200px;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 25px;
+
 }
+
+#first label,input{
+    display:inline-block;
+    position: relative;
+    padding-top: 16px;
+  
+}
+
+
 
 
 h3{
 display: inline-block;
 position: relative;
  bottom: 8vh;
+ font-weight: bold;
 }
 
 #p{
     display: inline-block;
     position: relative;
-  bottom: 25px;
-  right: 130px;
+  bottom: 20px;
+  right: 128px;
 }
 button{
     display: inline-block;
     position: relative;
-    bottom: 50px;
-
+    bottom: 44px;
+    left: 320px;
+    color:white;
+    background-color:tomato;
+    width: 150px;
+height: 40px;
 
 }
 
 
+footer hr{
+    background-image: none;
+    height: 0px;
 
+    
+}
+footer div{
+    position: relative;
+}
+footer img {
+    position: absolute;
+    bottom: .01pt;
+    left: 47.5%;
+}
+footer p{
+    color: gray;
+    font-size: 12px;
+    text-align: center;
+}
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    appearance: none;
+  }
+input[type="checkbox"] {
+    position: relative;
+    width: 1.3em;
+    height: .1em;
+    border: 1px solid gray;
+    border-radius: 5px;
+    /* Adjusts the position of the checkboxes on the text baseline */
+    vertical-align: -2px;
+    /* Set here so that Windows' High-Contrast Mode can override */
+    color: gray;
+  }
+  input[type="checkbox"]::before {
+    content: "✔";
+    position: absolute;
+    font-size: 1.7em;
+    bottom: -3px;
+    visibility:hidden;
+  }
+  input[type="checkbox"]:checked::before {
+    /* Use `visibility` instead of `display` to avoid recalculating layout */
+    visibility: visible;
+  }
+ 
