--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 header div{
 position: relative;
 display: inline-block; 
@@ -50,10 +52,19 @@ main img{
     
 }
 main article p{
+    
+    
     margin-top: 20px ;
     margin-left: 10px;
-    text-indent: 30px;
+    text-indent: 40px;
     margin-bottom: 50px;
+    width:100%;
+    
+     font-size: 18px;
+     display: flex;
+     justify-content:space-around;
+
+  
 }
 form {
    display:block;
@@ -117,6 +128,7 @@ position: relative;
     position: relative;
   bottom: 20px;
   right: 128px;
+  
 }
 button{
     display: inline-block;
