--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,27 @@
 
+*{box-sizing: border-box;}
+body{
+    height: 3100px;
 
+}
 header div{
 position: relative;
 display: inline-block; 
-left: 72%;
-margin: 20px;
+left: 73.7%;
+
 }
+ header div :nth-of-type(n+6){
+    position: relative;
+    left: 20px;
+    }
+
 header article{
 position: relative;
 display: inline-block;
+}
 
-}
-#move {
-    margin-left: 20px;
-}
 hr{
-    background-image: url("img/hr-img.png");
+    background-image: url("../img/hr-img.png");
     height: 20px;
 }
 header h2{
@@ -32,64 +38,72 @@ header p{
 h1{ 
     font-size: 50px;
     font-family:monospace;
-    margin-left: 10px;
-    margin-top: 75px;
-    margin-bottom: -20px;
+    position: relative;
+    left: 10px;
+    top: 30px;
+
 }
  main div p {
     display: inline-block;
-    margin-right: 83%;
-    margin-left: 10px;
+    position: relative;
+    left: 10px;
+    top: 30px;
     font-size: 12px ;
-    color: gray;
-   
-    
+    color: gray;   
+}
+main div img {
+    position: relative;
+    top: 30px;
+    left: 85%;
 }
 main img{
     display: inline-block;
-    margin: 10px;
-    margin-top: 25px;
+    position: relative;
+    left:  10px;
+    top: 60px; ;
     
 }
-main article p{
-    
-    
-    margin-top: 20px ;
-    margin-left: 10px;
+main article *{
+    position: relative;
+    top: 80px ;
+    left: 15px;
     text-indent: 40px;
-    margin-bottom: 50px;
     width:100%;
-    
-     font-size: 18px;
-     display: flex;
-     justify-content:space-around;
-
-  
+    font-size: 18px;
+    justify-content:space-around;
+    padding: 30px;
+}
+#secondhr{
+   
+    position: relative;
+    top: 140px;
 }
 form {
    display:block;
-   background-image: url("img/list-bg.png");
+   position: relative;
+   background-image: url("../img/list-bg.png");
    background-size:cover;
    background-repeat:no-repeat;
- 
-   margin: 20px;
+   top: 90px;
 }
 #sec {
     
     position: relative;
     display: inline-block;
-    top: 40px;
+    top: 60px;
+    left: 600px;
     width: 420px;
     height: 400px;
-    
     font-family: 'Patrick Hand', cursive;
     font-size: 25px;
+
     
 }
 #sec label,input{
     display:inline-block;
     position: relative;
     padding-top: 16px;
+   
   
 }
 
@@ -99,10 +113,11 @@ form {
     right: 130px;
     width: 300px;
     height: 350px;
-
-    margin-left: 200px;
+    top: 20px;
+    left: 80px;
     font-family: 'Patrick Hand', cursive;
     font-size: 25px;
+   
 
 }
 
@@ -119,26 +134,31 @@ form {
 h3{
 display: inline-block;
 position: relative;
- bottom: 8vh;
  font-weight: bold;
+ top: 100px;
+ left: 20px;
 }
-
+#vanpic{
+    display: inline-block;
+    position: relative;
+    top: 150px;   
+}
 #p{
     display: inline-block;
     position: relative;
-  bottom: 20px;
-  right: 128px;
+top: 150px;
+right: 110px;
   
 }
 button{
     display: inline-block;
     position: relative;
-    bottom: 44px;
+    top: 130px;
     left: 320px;
     color:white;
     background-color:tomato;
     width: 150px;
-height: 40px;
+    height: 40px;
 
 }
 
